Version 0.XXXXX | Next Sunday AD | 0197995

    API Changes/Compatibility Information:
     * New Widgets/Types
       - PackedGroup, PixelType, Preferences, ProgressBar, RadioButton,
           RadioItem, RadioLightButton, Rectangle (base class of all Widgets),
           RepeatButton, ReturnButton, Scrollbar, ScrollGroup, SecretInput
           (for passwords), ShapedWindow, Slider, Symbol (.*Image base class),
           Valuator, and xpmImage
     * Support for fltk's file and directory chooser API

    Resolved Issues/Bug Fixes:
     * FLTK::Menu->item() now (attempts to) return correctly blessed widgets

    Internal/Behavioral Changes:
     * The :default tag is no longer automatically exported

    Documentation/Sample Code/Test Suite:
     * Basic Rectangle tests
     * New example script for xpmImage
     * New FLTK::CheatSheet (incomplete)
     * First few recipes in the FLTK::Cookbook

    Notes:
     * The FLTK project is just getting started so now's a great time to join

    Meanwhile:
     * Ian G. was born October 23rd at 1:22pm. He was 8lbs 14oz and 22in long

Version 0.530 | 2009-10-05 00:42:52Z (Mon, 05 Oct 2009) | 3b70f43

    API Changes/Compatibility Information:
     * ...see below

    Resolved Issues/Bug Fixes:
     * ...see below

    Internal/Behavioral Changes:
     * It actually exists

    Documentation/Sample Code/Test Suite:
     * ...see above

    Notes:
     * The FLTK project is just getting started so now's a great time to join

_ -.-. .... .- -. --. . ... _________________________________________
For more information, see the commit log:
    http://github.com/sanko/fltk-perl/commits/master

$Ver$ from git $Rev$
$Date$
$Url$