@@ -13,10 +13,9 @@
 =for git $Id$
 
 =cut
-
 use strict;
 use warnings;
-use Test::More tests => 30;
+use Test::More tests => 33;
 use Module::Build qw[];
 use Time::HiRes qw[];
 my $test_builder = Test::More->builder;
@@ -28,56 +27,64 @@ my $verbose         = $build->notes('verbose');
 my $interactive     = $build->notes('interactive');
 
 #
-use_ok('FLTK', qw[:all]);
+use FLTK qw[:vars :dialog];
 
 #
-is(FLTK::ok(),           '&OK',      'Default English value for ok()');
-is(FLTK::ok('Alright!'), 'Alright!', 'Change value with ok( \'Alright!\' )');
-is(FLTK::ok(),           'Alright!', 'Verify new value for ok()');
+is($ok, '&OK', 'Default English value for $ok');
+ok($ok = 'Alright!', 'Change value of $ok to \'Alright!\'');
+is($FLTK::ok, 'Alright!', 'Verify new value for $ok');
 
 #
-is(FLTK::yes(),        '&Yes',  'Default English value for yes()');
-is(FLTK::yes('Yeah!'), 'Yeah!', 'Change value with yes( \'Yeah!\' )');
-is(FLTK::yes(),        'Yeah!', 'Verify new value for yes()');
+is($yes, '&Yes', 'Default English value for $yes');
+ok($yes = 'Yeah!', 'Change value of yes to \'Yeah!\'');
+is($FLTK::yes, 'Yeah!', 'Verify new value of $yes');
 
 #
-is(FLTK::no(),        '&No',   'Default English value for no()');
-is(FLTK::no('Nope!'), 'Nope!', 'Change value with no( \'Nope!\' )');
-is(FLTK::no(),        'Nope!', 'Verify new value for no()');
+is($no, '&No', 'Default English value for $no');
+ok($no = 'Nope!', 'Change value of $no to \'Nope!\'');
+is($FLTK::no, 'Nope!', 'Verify new value of $no');
 
 #
-is(FLTK::cancel(), '&Cancel', 'Default English value for cancel()');
-is(FLTK::cancel('Forget it!'),
-    'Forget it!', 'Change value with cancel( \'Forget it!\' )');
-is(FLTK::cancel(), 'Forget it!', 'Verify new value for cancel()');
+is($cancel, '&Cancel', 'Default English value of $cancel');
+ok($cancel = 'Forget it!', 'Change value of cancel to \'Forget it!\'');
+is($FLTK::cancel, 'Forget it!', 'Verify new value of $cancel');
 
 #
-ok(!message_window_timeout(), 'Default value for message_window_timeout()');
-is(message_window_timeout(0.25),
-    0.25, 'Change value with message_window_timeout( 1.5 )');
-is(message_window_timeout(), 0.25,
-    'Verify new value for message_window_timeout()');
+ok(!$message_window_timeout,
+    'Default value for $message_window_timeout');
+ok($message_window_timeout = 0.25,
+    'Change value of $message_window_timeout to 0.25');
+is($FLTK::message_window_timeout, 0.25,
+    'Verify new value of $message_window_timeout');
 
 #
-ok(!message_window_scrollable(),
-    'Default value for message_window_scrollable()');
-is(message_window_scrollable(1),
-    1, 'Change value with message_window_scrollable( 1 )');
-is(message_window_scrollable(),
-    1, 'Verify new value for message_window_scrollable()');
+ok(!$message_window_scrollable,
+    'Default value for $message_window_scrollable');
+ok($message_window_scrollable = 1,
+    'Change value of $message_window_scrollable to 1');
+is($FLTK::message_window_scrollable,
+    1, 'Verify new value of $message_window_scrollable');
 
 #
-ok(!message_window_label(), 'Default value for message_window_scrollable()');
-is(message_window_label('This is my title!'),
+ok(!$message_window_label,
+    'Default value of $message_window_scrollable');
+ok($message_window_label = 'This is my title!',
+    'Change value of $message_window_label to \'This is my title!\'');
+is($FLTK::message_window_label,
     'This is my title!',
-    'Change value with message_window_label( \'This is my title!\' )');
-is(message_window_label(),
-    'This is my title!',
-    'Verify new value for message_window_label()');
+    'Verify new value of $message_window_label');
 
 #
-isa_ok(message_style(), 'FLTK::NamedStyle', 'message_style()');
-isa_ok(icon_style(),    'FLTK::NamedStyle', 'icon_style()');
+my $message_style = message_style();
+my $icon_style    = icon_style();
+isa_ok($message_style, 'FLTK::NamedStyle', 'message_style()');
+isa_ok($icon_style,    'FLTK::NamedStyle', 'icon_style()');
+ok(message_style($icon_style), 'Switching message_style...');
+ok(icon_style($message_style), '...with icon_style');
+$message_style = message_style();
+$icon_style    = icon_style();
+ok(message_style($icon_style), 'Reversing the message_style...');
+ok(icon_style($message_style), '...and icon_style switch');
 
 #
 note
